jenkins/Deployment/jenkins_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: deploy-jenkins
spec:
  tls:
  - hosts:
    - jenkins.localhost
    secretName: tls-secret
  rules:
  - host: jenkins.localhost
    http:
      paths:
        - path: /(/|$)(.*)
          backend:
            serviceName: jenkins
            servicePort: 80
        - path: /([ ]*)(.*)
          backend:
            serviceName: jenkins
            servicePort: 80
